--- a/src/main/resources/templates/admin/account/index.html
+++ b/src/main/resources/templates/admin/account/index.html
@@ -63,8 +63,8 @@
                             <div class="col-md-2">
                                 <select name="role" class="form-control">
                                     <option value="">Tất cả quyền</option>
-                                    <option value="ROLE_ADMIN" th:selected="${role == 'ROLE_ADMIN'}">Admin</option>
-                                    <option value="ROLE_USER" th:selected="${role == 'ROLE_USER'}">User</option>
+                                    <option value="ADMIN" th:selected="${role == 'ADMIN'}">Admin</option>
+                                    <option value="USER" th:selected="${role == 'USER'}">User</option>
                                 </select>
                             </div>
 
